# algebraic-structures

./: .gitignore  README.md  algebra-structures.cabal  algebraic-structures.cabal
src/Math/: Structure.hs
src/Math/Structure/: Additive.hs  Instances.hs  Module.hs  Multiplicative.hs  Ring.hs  Tasty.hs
src/Math/Structure/Additive/: .Magma.hs.swp  Abelean.hs  Abelian.hs  DecidableZero.hs  Group.hs  Magma.hs  Monoid.hs  Semigroup.hs  StdInstances.hs
src/Math/Structure/Instances/Standard/: Additive.hs  Multiplicative.hs  Num.hs  Ring.hs  Vector.hs
src/Math/Structure/Instances/TH/: Additive.hs  Multiplicative.hs  Ring.hs
src/Math/Structure/Module/: Algebra.hs  LinearAction.hs  Module.hs
src/Math/Structure/Multiplicative/: Action.hs  Commutative.hs  DecidableOne.hs  Group.hs  Magma.hs  Monoid.hs  Semigroup.hs  StdInstances.hs  Unit.hs
src/Math/Structure/Ring/: Distributive.hs  Division.hs  Euclidean.hs  Factorial.hs  Field.hs  Integral.hs  PID.hs  Rig.hs  Ring.hs  Rng.hs  Semiring.hs  StdInstances.hs  TH.hs
src/Math/Structure/Tasty/: Additive.hs  Intertwine.hs  Module.hs  Multiplicative.hs  Ring.hs  Unit.hs  Utils.hs
src/Math/Structure/Tasty/NonZero/: SmallCheck.hs
src/Math/Structure/Tasty/Unit/: QuickCheck.hs  SmallCheck.hs
src/Math/Structure/Utility/: TH.hs  Tasty.hs
src/Math/Structure/Utils/: TH.hs  Tasty.hs
src/Test/Natural/: QuickCheck.hs
test/Math/Structure/Tasty/: Additive.hs  Intertwine.hs  Module.hs  Multiplicative.hs  NonZero.hs  Ring.hs
test/Math/Structure/Tasty/NonZero/: QuickCheck.hs  SmallCheck.hs
test/Math/Structure/Utility/: Tasty.hs
