name:                algebra-structures
version:             0.1.0.0
synopsis:            Type classes for basic algebraic structures
license:             GPL-3
license-file:        LICENSE
author:              Martin Westerholt-Raum
maintainer:          ???
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Math.Structure.Additive
  other-modules:
    Math.Structure.Additive.Abelean
    Math.Structure.Additive.Group
    Math.Structure.Additive.Magma
    Math.Structure.Additive.Monoid
    Math.Structure.Additive.Semigroup

  build-depends:
      base >= 4.8 && < 4.9
    , vector >= 0.10 && < 0.11
    , smallcheck >= 1.1 && < 1.2
    , tasty >= 0.10 && < 0.11
    , tasty-quickcheck >= 0.8 && < 0.9
    , tasty-smallcheck >= 0.8 && < 0.9

  hs-source-dirs:      src
  default-language:    Haskell2010
