name:                algebra-structures
version:             0.1.0.0
synopsis:            Type classes for basic algebraic structures
license:             GPL-3
license-file:        LICENSE
author:              Martin Westerholt-Raum
maintainer:          ???
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Math.Structure

    Math.Structure.Additive
    Math.Structure.Module
    Math.Structure.Multiplicative
    Math.Structure.Ring

    Math.Structure.Instances
    Math.Structure.Instances.TH.Additive
    Math.Structure.Instances.TH.Multiplicative
    Math.Structure.Instances.TH.Ring

    Math.Structure.Tasty

  other-modules:
    Math.Structure.Additive.Abelian
    Math.Structure.Additive.DecidableZero
    Math.Structure.Additive.Group
    Math.Structure.Additive.Magma
    Math.Structure.Additive.Monoid
    Math.Structure.Additive.Semigroup

    Math.Structure.Module.Algebra
    Math.Structure.Module.LinearAction
    Math.Structure.Module.Module

    Math.Structure.Multiplicative.Action
    Math.Structure.Multiplicative.Commutative
    Math.Structure.Multiplicative.DecidableOne
    Math.Structure.Multiplicative.Group
    Math.Structure.Multiplicative.Magma
    Math.Structure.Multiplicative.Monoid
    Math.Structure.Multiplicative.Semigroup

    Math.Structure.Ring.Distributive
    Math.Structure.Ring.Division
    Math.Structure.Ring.Euclidean
    Math.Structure.Ring.Factorial
    Math.Structure.Ring.Field
    Math.Structure.Ring.Integral
    Math.Structure.Ring.PID
    Math.Structure.Ring.Rig
    Math.Structure.Ring.Ring
    Math.Structure.Ring.Rng
    Math.Structure.Ring.Semiring

    Math.Structure.Instances.Standard.Additive
    Math.Structure.Instances.Standard.Multiplicative
    Math.Structure.Instances.Standard.Ring

    Math.Structure.Tasty.Additive
    Math.Structure.Tasty.Module
    Math.Structure.Tasty.Multiplicative
    Math.Structure.Tasty.Ring

    Math.Structure.Tasty.NonZero
    Math.Structure.Tasty.NonZero.QuickCheck
    Math.Structure.Tasty.NonZero.SmallCheck

    Math.Structure.Utils.Tasty
    Math.Structure.Utils.TH

  build-depends:
      base >= 4.8 && < 4.9
    , composition >= 1.0 && < 1.1
    , mtl >= 2.2 && < 2.3
    , natural-test
    , QuickCheck >= 2.7 && < 2.8
    , smallcheck >= 1.2 && < 1.3
    , tasty >= 0.10 && < 0.11
    , tasty-hunit >= 0.9 && < 0.10
    , tasty-quickcheck >= 0.8 && < 0.9
    , tasty-smallcheck >= 0.8 && < 0.9
    , template-haskell >= 2.10 && < 2.11
    , vector >= 0.10 && < 0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
