name:                algebraic-structures
version:             0.1.0.0
synopsis:            Type classes for basic algebraic structures
license:             GPL-3
license-file:        LICENSE
author:              Martin Raum <martin@raum-brothers.eu>
maintainer:          Martin Raum <martin@raum-brothers.eu>
category:            Math
build-type:          Simple
cabal-version:       >=1.16

library
  exposed-modules:
    Math.Structure

    Math.Structure.Additive
    Math.Structure.Module
    Math.Structure.Multiplicative
    Math.Structure.Ring

    Math.Structure.Instances
    Math.Structure.Instances.TH.Additive
    Math.Structure.Instances.TH.Multiplicative
    Math.Structure.Instances.TH.Ring

    Math.Structure.Tasty

  other-modules:
    Math.Structure.Additive.Abelian
    Math.Structure.Additive.DecidableZero
    Math.Structure.Additive.Group
    Math.Structure.Additive.Magma
    Math.Structure.Additive.Monoid
    Math.Structure.Additive.Semigroup

    Math.Structure.Module.Algebra
    Math.Structure.Module.LinearAction
    Math.Structure.Module.Module

    Math.Structure.Multiplicative.Action
    Math.Structure.Multiplicative.Commutative
    Math.Structure.Multiplicative.DecidableOne
    Math.Structure.Multiplicative.Group
    Math.Structure.Multiplicative.Magma
    Math.Structure.Multiplicative.Monoid
    Math.Structure.Multiplicative.Semigroup
    Math.Structure.Multiplicative.Unit

    Math.Structure.Ring.Distributive
    Math.Structure.Ring.Division
    Math.Structure.Ring.Euclidean
    Math.Structure.Ring.Factorial
    Math.Structure.Ring.Field
    Math.Structure.Ring.Integral
    Math.Structure.Ring.PID
    Math.Structure.Ring.Rig
    Math.Structure.Ring.Ring
    Math.Structure.Ring.Rng
    Math.Structure.Ring.Semiring

    Math.Structure.Instances.Standard.Num
    Math.Structure.Instances.Standard.Vector

    Math.Structure.Tasty.Additive
    Math.Structure.Tasty.Module
    Math.Structure.Tasty.Multiplicative
    Math.Structure.Tasty.Ring

    Math.Structure.Tasty.NonZero
    Math.Structure.Tasty.NonZero.QuickCheck
    Math.Structure.Tasty.NonZero.SmallCheck

    Math.Structure.Utility.Tasty
    Math.Structure.Utility.TH

  build-depends:
      base
    , composition
    , mtl
    , natural-test
    , QuickCheck
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , template-haskell
    , vector

  ghc-options:
    -static
    -O3
    -threaded

  hs-source-dirs:      src
  default-language:    Haskell2010
