cabal-version:       3.0
name:                algebraic-structures
version:             0.1.0.0
synopsis:            Type classes for basic algebraic structures
license:             GPL-3.0-only
license-file:        LICENSE
author:              Martin Raum <martin@raum-brothers.eu>
maintainer:          Martin Raum <martin@raum-brothers.eu>
category:            Math
build-type:          Simple

common common

  build-depends:
      base
        >= 4.8  && < 4.17
    , template-haskell
        >= 2.10 && < 2.19

  ghc-options:
      -static
      -O3

  default-language:
    Haskell2010

  default-extensions:
      ConstraintKinds
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , MultiParamTypeClasses
    , RankNTypes
    , StandaloneDeriving

library

  import: common

  hs-source-dirs:
    src

  exposed-modules:
    Math.Structure

    Math.Structure.Additive
    Math.Structure.Module
    Math.Structure.Multiplicative
    Math.Structure.Ring

    Math.Structure.Instances
    Math.Structure.Instances.TH.Additive
    Math.Structure.Instances.TH.Multiplicative
    Math.Structure.Instances.TH.Ring

    Math.Structure.Additive.Abelian
    Math.Structure.Additive.DecidableZero
    Math.Structure.Additive.Group
    Math.Structure.Additive.Magma
    Math.Structure.Additive.Monoid
    Math.Structure.Additive.Semigroup

    Math.Structure.Module.Algebra
    Math.Structure.Module.LinearAction
    Math.Structure.Module.Module

    Math.Structure.Multiplicative.Action
    Math.Structure.Multiplicative.Commutative
    Math.Structure.Multiplicative.DecidableOne
    Math.Structure.Multiplicative.Group
    Math.Structure.Multiplicative.Magma
    Math.Structure.Multiplicative.Monoid
    Math.Structure.Multiplicative.Semigroup
    Math.Structure.Multiplicative.Unit

    Math.Structure.Ring.Distributive
    Math.Structure.Ring.Division
    Math.Structure.Ring.Euclidean
    Math.Structure.Ring.Factorial
    Math.Structure.Ring.Field
    Math.Structure.Ring.Integral
    Math.Structure.Ring.PID
    Math.Structure.Ring.Rig
    Math.Structure.Ring.Ring
    Math.Structure.Ring.Rng
    Math.Structure.Ring.Semiring

    Math.Structure.Instances.Standard.Num
    Math.Structure.Instances.Standard.Vector

  other-modules:
    Math.Structure.Utility.TH

  build-depends:
      composition
        >= 1.0  && < 1.1
    , vector
        >= 0.11 && < 0.13

library algebraic-structures-test

  import: common

  visibility: public

  hs-source-dirs:
    test

  exposed-modules:
    Math.Structure.Tasty

  other-modules:
    Math.Structure.Tasty.Additive
    Math.Structure.Tasty.Intertwine
    Math.Structure.Tasty.Module
    Math.Structure.Tasty.Multiplicative
    Math.Structure.Tasty.Ring

    Math.Structure.Tasty.NonZero
    Math.Structure.Tasty.NonZero.QuickCheck
    Math.Structure.Tasty.NonZero.SmallCheck

    Math.Structure.Utility.Tasty

  build-depends:
      algebraic-structures
    , mtl
        >= 2.2   && < 2.3
    , QuickCheck
        >= 2.10  && < 2.15
    , quickcheck-instances
        >= 0.3   && < 0.4
    , smallcheck
        >= 1.1.3 && < 1.3
    , tasty
        >= 1.1   && < 1.4
    , tasty-hunit
        >= 0.10  && < 0.11
    , tasty-quickcheck
        >= 0.10  && < 0.11
    , tasty-smallcheck
        >= 0.8 && < 0.9
